chore:新增算法目录

--- a/字节/1.一面/1.JS基础.MD
+++ b/字节/1.一面/1.JS基础.MD
@@ -1,19 +1,34 @@
 ### 1.`for`循环和`forEach`循环，哪种性能好一些？
-> `for`循环的性能要比`forEach`性能好，
+> `for`循环的性能要比`forEach`性能好，因为`forEach`循环由`for`实现
+```JS
+// forEach
+Array.prototype.forEach = function (cb, context) {
+  if (!this instanceof Array || typeof cb !== 'function') return;
+  let arr = Array.prototype.slice.call(this);
+  for (let i = 0; i < arr.length; i++) {
+    if (!arr[i]) continue;
+    cb.call(context, arr[i], i, arr);
+  }
+}
+```
+- 【1】`forEach`不会改变原数组
+- 【2】`forEach`除了抛出异常以外，没有办法中止或跳出循环
+- 【3】`forEach`不会对未初始化的值进行任何操作
+- 【4】`forEach`的第二个参数用来改变`this`的指向
 
-2.`let`,`const`,`var`的区别
+### 2.`let`,`const`,`var`的区别
 
-3.JS的基础数据类型有哪些？
+### 3.JS的基础数据类型有哪些？
 
-4.什么是`Symbol`,它的使用场景是什么？
+### 4.什么是`Symbol`,它的使用场景是什么？
 
-5.数组原型上的方法有哪些，哪些是可以改变数组的，哪些是不可以的？
+### 5.数组原型上的方法有哪些，哪些是可以改变数组的，哪些是不可以的？
 
-6.如何转换一个类数组对象，大致原理是怎么样的？
+### 6.如何转换一个类数组对象，大致原理是怎么样的？
 
-7.`Map`和`WeakMap`的区别？
+### 7.`Map`和`WeakMap`的区别？
 
-8.了解JS的作用域么？函数作用域是在什么时候形成的？
+### 8.了解JS的作用域么？函数作用域是在什么时候形成的？
 
 9.什么是闭包，它有什么作用，它的原理？
 
