--- a/字节/1.一面/1.JS基础.MD
+++ b/字节/1.一面/1.JS基础.MD
@@ -17,36 +17,251 @@ Array.prototype.forEach = function (cb, context) {
 - 【4】`forEach`的第二个参数用来改变`this`的指向
 
 ### 2.`let`,`const`,`var`的区别
+- 【1】块级作用域
+- 【2】不存在变量提升
+- 【3】暂时性死区
+- 【4】不可重复声明
+- 【5】`let`、`const`声明的全局变量不会挂在顶层对象下
+
+> 注意：`const`声明之后必须马上赋值，否则会报错。 `const`简单类型一旦声明就不能再更改，复杂类型指针指向的地址不能更改，内部数据可以更改。
 
 ### 3.JS的基础数据类型有哪些？
+- `Boolean`
+- `String`
+- `Number`
+- `null`
+- `undefined`
+- `Symbol`
+- `Bigint`
+  - 一种新的数据类型，用于当整数值大于`Number`数据类型支持的范围时。这种数据类型允许我们安全地对大整数执行算术操作，表示高分辨率的时间戳，使用大整数`id`，等等，而不需要使用库
 
 ### 4.什么是`Symbol`,它的使用场景是什么？
+> 代表创建后独一无二且不可变得数据类型，它的出现我认为主要是为了解决可能出现的全局变量冲突的问题
+
+- 使用场景
+  - 【1】消除魔法字符串
+  - 【2】`Symbol.hasInstance`
+  - 【3】`Symbol.isConcatSpreadable`
+  - 【4】`Symbol.iterator`
+  - 【5】`Symbol.species` 创建衍生对象时会使用该属性
 
 ### 5.数组原型上的方法有哪些，哪些是可以改变数组的，哪些是不可以的？
+- 改变原数组的方法
+  - 【1】`push`,尾部插入,返回修改后数组的长度
+  - 【2】`pop`,尾部弹出,返回被弹出的值
+  - 【3】`unshift`,头部插入,返回修改后数组的长度
+  - 【4】`shift`,头部弹出,返回被弹出的值
+  - 【5】`reverse`,翻转数组
+  - 【6】`splice`,可以增删改查数组,接收三个参数:起始位置、要操作的项数、要替换的项
+  - 【7】`sort`,改变数组内部项的排列顺序
+  - 【8】`copyWithin` 浅复制数组的一部分到同一数组的另一个位置,返回原数组,不会改变数组的长度
+  - 【9】`fill`用一个固定的值填充一个数组中从起始索引到终止索引内的全部元素。不包括终止索引
+- 不改变原数组的方法
+  - 【1】`entries`返回一个新的`Array Iterator`对象
+  - 【2】`every`测试一个数组内的所有元素是否都能通过某个指定函数的测试,返回一个布尔值
+  - 【3】`filter`创建一个新的数组,其包含通过所提供函数实现的测试的所有元素
+  - 【4】`find`返回数组中满足提供的测试函数的第一个元素的**值**。否则返回`undefined`
+  - 【5】`findIndex`返回数组中满足提供的测试函数的第一个元素的**索引**。否则返回`-1`
+  - 【6】`flat`按照一个指定的深度递归遍历数组,并将所有元素与遍历到的子数组中的元素合并为一个新数组返回
+  - 【7】`flatMap`首先使用映射函数映射每个元素，然后将结果压缩成一个新数组
+  - 【8】`forEach`对数组的每个元素执行一次给定的函数
+  - 【9】`includes`用来判断一个数组是否包含一个指定的值
+  - 【10】`indexOf`返回在数组中可以找到一个给定元素的第一个**索引**,如果不存在,返回`-1`
+  - 【11】`join`将一个数组的所有元素连接成一个字符串并返回这个字符串。如果数组只有一个项目,那么将返回该项目而不使用分隔符。
+  - 【12】`key`返回一个包含数组中每个索引键的`Array Iterator`对象
+  - 【13】`lastIndexof`返回指定元素在数组中最后一个的索引,如果不存在则返回`-1`
+  - 【14】`map`创建一个新数组,其结果是该数组中的每个元素都调用一次提供的函数后返回
+  - 【15】`reduce`对数组中的每个元素执行一个`reducer`函数(升序执行),将其结果汇总为单个返回值
+  - 【16】`slice`返回一个新的数组对象
 
 ### 6.如何转换一个类数组对象，大致原理是怎么样的？
+ - 类数组的特点
+  - 【1】有索引
+  - 【2】有长度
+  - 【3】是个对象
+  - 【4】能被迭代(非必须)
+ - 常见的类数组有
+  - `nodeList`
+  - `arguments`
+ - 转换成数组等方法
+  - 【1】`Array.from(arrayLikeArr)`
+  - 【2】`Array.prototype.slice.call(arrayLikeArr)`
+  - 【3】`[...arrayLikeArr]`
+
 
 ### 7.`Map`和`WeakMap`的区别？
+ - 【1】`Map`对象的键可以是任意类型，但`weakMap`的键只能是对象引用
+ - 【2】`WeakMap`对象是弱引用，若包含的对象无引用会被自动清除出集合（垃圾回收机制）
+ - 【3】`WeakMap`不能遍历
+
 
 ### 8.了解JS的作用域么？函数作用域是在什么时候形成的？
+ - 作用域：作用域是一套规则，用于确定在何处以及如何查找变量。如果查找的目的是对变量进行赋值就会采用LHS查询，如果目的是为了获取变量的值，就会使用RHS查询
+ - 函数作用域：是在函数编写阶段确定的，是在函数执行阶段形成的
+ - 作用域链：引擎开始从当前执行作用域开始查找变量，如果找不到就向上一级继续查找，当抵达最外层的全局作用域时，无论找到还是没找到，查找过程都会停止
 
-9.什么是闭包，它有什么作用，它的原理？
 
-10.通过例子的形式，说一下JS的原型链？
+### 9.什么是闭包，它有什么作用，它的原理？
+ - 闭包：函数执行形成一个私用作用域，保护里面的私有变量不受外界干扰，这种保护机制称之为**闭包**
+ - 闭包的作用：
+  - 【1】保护作用，保护私有变量不受外界干扰
+  - 【2】保存作用，形成不销毁的栈内存，把一些值保存下来，方便后面的调取使用
 
-11.如何实现一个`new`？
 
-12.说一下JS的继承方式？
+### 10.通过例子的形式，说一下JS的原型链？
 
-13.什么是箭头函数，它和普通函数的区别？
+ - 原型：
+  - 【1】所有函数数据类型都天生自带一个属性(`prototype`原型)，这个属性的值是一个对象，这个对象中存储了当前类供其实例调取使用的公有属性和方法，浏览器会默认给他开辟一个堆内存
+  - 【2】在浏览器给`prototype`开辟的堆内存中有一个天生自带的属性`constructor`，这个属性存储的值是当前函数本身
+  - 【3】每一个对象都有一个`__proto__`的属性，这个属性指向当前实例所属类的`prototype`
+- 原型链
+  - 它是一种基于`__proto__`向上查找的机制。当我们操作实例的某个属性或方法的时候，首先找自己空间中私有属性或方法
+    - 找到了，则结束查找，使用自己的私有属性即可
+    - 没有找到则基于`__proto__`找所属类的`prototype`，如果找到了就用这个公共的，如果没有找到，基于原型上的`__ptoto__`继续向上查找，一直找到`Object.prototype`为止，如果还没有则操作的属性或者方法不存在返回`undefined`
 
-14.this的执向？
+
+### 11.如何实现一个`new`,`call`,`apply`,`bind`？
+ - `new`
+  - 新生成一个对象
+  - 链接到原型
+  - 绑定this
+  - 返回一个对象
+```JS
+ function myNew(){
+   const constructor = [].shift.call(arguments);
+   const obj = Object.create({});
+   obj.__proto__ = constructor.prototype;
+   const r = constructor.apply(obj,arguments);
+   return r instanceof Object ? r :obj;
+ }
+```
+
+ - `call`
+  - 改变`this`的指向
+  - 执行函数
+```JS
+  Function.prototype.call = function(context){
+    if(typeof this !== 'function'){
+      throw new TypeError(`${this} is not a function`);
+    }
+    context = Object(context || window);
+    context.fn = this;
+    let args = [...arguments].slice(1);
+    const result = context.fn(...args);
+    delect context.fn;
+    return result
+  }
+```
+
+  - `apply`
+    - 改变`this`指向
+    - 执行函数，参数传数组形式
+```JS
+  Function.prototype.apply = function(context,args){
+    if(typeof this !=='function'){
+      throw new TypeError(`${this} is not a function`);
+    }
+    context = Object(context || window);
+    context.fn = this;
+    let result;
+    if(args){
+      result = context.fn(...args)
+    }else{
+      result = context.fn();
+    }
+    delete context.fn:
+    return result;
+  }
+```
+
+ - `bind`
+  - 绑定`this`指向
+  - 返回一个绑定后函数
+  - 如果绑定的的函数被`new`执行，`this`指向当前函数的实例
+  - `new`出来的实例可以找到原有类的原型
+```JS
+  Function.prototype.bind = function(context){
+    if(typeof this !=='function'){
+      throw new TypeError(`${this} is not a function`);
+    }
+    context = Object(context||window);
+    const _this = this;
+    const outsideArgs = [...arguments].slice(1);
+    function Fn(){};
+    function bindFn(){
+      const insideArgs = [...args];
+      this.apply(this instanceof bindFn ? this:context,outsideArgs.concat(insideArgs));
+    }
+    Fn.prototype = _this.prototype;
+    bindFn.protytype = new Fn();
+    return bindFn;
+  }
+```
+
+### 12.说一下JS的继承方式？
+ - 1、原型链继承
+  - 优点：
+    - 【1】继承了父类的模板，又继承了父类的原型对象
+  - 缺点：
+    - 【1】如果想给子类的原型上新增属性或者方法，就必须放在`Child.prototype = new Parent()`操作语句后
+    - 【2】无法实现多继承，因为已经指定原型对象了
+    - 【3】来自原型对象的所有属性都被共享了，这样如果不小心修改了原型对象中的引用类型属性，那么所有子类创建的实例都会受到影响
+    - 【4】创建子类时无法向父类构造函数传参;
+  - 2、构造函数继承
+   - 优点：
+    - 【1】解决了原型链继承中子类实例共享父类引用对象的问题
+    - 【2】实现多继承
+    - 【3】创建子类实例时，可以向父类传递参数
+   - 缺点：
+    - 【1】只能继承父类实例的属性和方法，不能继承父类原型上的属性和方法
+    - 【2】实例不是父类的实例，只是子类的实例
+    - 【3】无法实现函数复用，每个子类的实例都有函数的副本，影响性能
+  - 3、组合继承
+   - 优点：
+    - 【1】可以继承父类实例属性和方法，也能够继承父类原型上的属性和方法
+  - 缺点：
+    - 【1】父类构造函数被调用两次
+  - 4、寄生组合继承
+  - 5、class继承
+
+
+### 13.什么是箭头函数，它和普通函数的区别？
+  - 箭头函数：一种简短的函数表达式
+  - 区别：
+   - 【1】没有自己的`this`，只能继承外层函数的`this`，所以不能用`new`调用
+   - 【2】没有自己的`arguments`
+   - 【3】没有原型，也没有原型链
+### 14.this的执向？
+ - `优先级`
+  - 【1】`new`调用
+  - 【2】`call`,`apply`,`bind`显示绑定
+  - 【3】隐式绑定(指向最后调用它的对象)
+  - 【4】默认绑定(非严格模式下绑定在window下)
 
 15.如何迭代一个对象，`for···in···`这种方式，如何取出对象自己的属性？
+ - `for···in···`
+ - `hasOwnProperty`
 
-16.`Object.assign`它是一个浅拷贝还是一个深拷贝？
-
-17.如何实现一个深拷贝？
+### 16.`Object.assign`它是一个浅拷贝还是一个深拷贝？
+- 浅拷贝
+### 17.如何实现一个深拷贝？
+```JS
+  function deepClone(obj,hash=new WeakMap){
+    if(obj == null) return obj;
+    if(obj instanceof Date) return new Date(obj);
+    if(obj instanceof RegExp) return new RegExp(obj);
+    if(!typeof obj !== 'object') return obj;
+    if(hash.has(obj)) return hash.get(obj);
+    const cloneObj = new obj.constructor;
+    hash.set(obj,cloneObj);
+    for(let key in obj){
+      if(obj.hasOwnProperty(key)){
+        cloneObj[key] = clone(obj[key],hash);
+      }
+    }
+    return cloneObj;
+  }
+```
 
 18.什么是`Promise`,如何实现它,`Promise.then`,`Promise.race`如何实现？
 
