--- a/字节/1.一面/1.JS基础.MD
+++ b/字节/1.一面/1.JS基础.MD
@@ -263,15 +263,86 @@ Array.prototype.forEach = function (cb, context) {
   }
 ```
 
-18.什么是`Promise`,如何实现它,`Promise.then`,`Promise.race`如何实现？
+### 18.什么是`Promise`,如何实现它,`Promise.then`,`Promise.race`如何实现？
+ - `Promise`的含义
+  - 是异步编程的一种解决方案，解决了传统的回调地狱
+  - 所谓的`Promise`简单点说就是一个容器，里面保存着某种未来才会结束的事件（通常是一个异步操作）
+  - 从语法上说,`Promise`是一个对象，从它可以获取到异步操作的信息
+ - `Promise`的特点
+  - 【1】状态不受外界影响。有三种状态`pending`,`fulfilled`,`rejected`。
+  - 【2】一旦状态改变，就不会改变，任何时候都能得到这个结果。`Promise`的状态改变只有两种可能，`pending->fulfilled`,`pending->rejected`
+ - `Promise`的缺点
+  - 【1】无法取消`Promise`，一旦新建就会立即执行，无法中途退出
+  - 【2】如果不设置回调函数，`Promise`内部抛错，不会反应到外部
+  - 【3】当处于`pending`状态时，无法得知目前进展到哪个阶段(刚刚开始还是即将完成);
 
-19.什么是防抖,什么是节流,如何实现防抖？
 
-20.描述一下`Event Loop`,这个循环会一直下去吗？宏任务和微任务的区别？
+### 19.什么是防抖,什么是节流,如何实现防抖？
+ - 防抖 --> 防止抖动，以免把一次事件误认为是多次，单位时间内事件被触发会被重置，避免事件被误触发多次。（重在清零）
+```JS
+    function debounce(cb,wait){
+      let timer;
+     return (...args)=>{
+       clearTimeout(timer);
+        timer = setTimeout(()=>{
+          cb(...args)
+        },wait)
+     }
+    }
+```
+ - 节流 --> 控制流量，单位时间内事件只能触发一次，如服务器端的限流。(重在开关锁)
+ ```JS
+    function throttle(cb,wait){
+      let timer;
+      return (...args)=>{
+        if(timer) return;
+        timer = setTimeout(()=>{
+          cb(...args);
+          timer = null;
+        })
+      }
+    }
+ ```
+### 20.描述一下`Event Loop`,这个循环会一直下去吗？宏任务和微任务的区别？
+ - 宏任务
+  - 【1】`script`全部代码
+  - 【2】`setTimeout`
+  - 【3】`setInterval`
+  - 【4】`setImmediate`(浏览器暂时不支持，只有IE10支持)
+  - 【5】`I/O`
+  - 【6】`UI Rendering`
+ - 微任务
+  - 【1】`Process.nextTick`(node独有)
+  - 【2】`Promise.then`
+  - 【3】`MutationObserver`
 
-21.如果在`Event Loop`中,不断`push`微任务是否一直会执行？
+### 21.如果在`Event Loop`中,不断`push`微任务是否一直会执行？
+ - 会一直执行
 
-22.浏览器的事件机制有哪几个阶段？`addEventListener`的第三个参数起到什么作用？
+### 22.浏览器的事件机制有哪几个阶段？`addEventListener`的第三个参数起到什么作用？
+  - 三个阶段
+    - 捕获阶段
+    - 目标阶段
+    - 冒泡阶段(stopPropagation,preventDefault)
+  - addEventListener(type,listener,options ||  useCapture);
+   - options
+    - capture : Boolean -->表示是否在捕获阶段触发事件
+    - once: Boolean -->表示是否触发一次
+    - passive : --> 表示listener是否永远都不会调用`preventDefault`
+   - useCapture : Boolean -->表示是否在捕获阶段触发事件
 
-23.如何实现一个请求超时？
+### 23.如何实现一个请求超时？
 
+```JS
+  function promiseWithTimeout(url,timer){
+    return new Promise((resolve,reject)=>{
+      fetch(url).then(data=>data.json()).then(resolve);
+      setTimeout(()=>reject(Error('请求超时了')),timer)
+    })
+  }
+```
+
+### 24.实现一个匹配url的正则表达式
+```JS
+/^(((ht|f)tps?):\/\/)?[\w-]+(\.[\w-]+)+([\w.,@?^=%&:/~+#-]*[\w@?^=%&/~+#-])?$/
+```
