--- a/字节/1.一面/2.CSS基础.MD
+++ b/字节/1.一面/2.CSS基础.MD
@@ -1,5 +1,26 @@
-1.什么是盒模型，如何进行不同盒模型的转换？
+### 1.什么是盒模型，如何进行不同盒模型的转换？
+ - 盒模型
+  - 定义了盒子的每个部分 —— `margin`, `border`, `padding`, and `content` —— 合在一起就可以创建我们在页面上看到的内容
+ - `box-sizing`
+  - `content-box`
+  - `border-box`
 
-2.样式的优先级排序，如何去获取一个样式的相邻元素？
-
-3.`position`的属性值有哪些?
+### 2.样式的优先级排序，如何去获取一个样式的相邻元素？
+  - `!import`>行内样式> ID选择器 > 类选择器 = 属性选择器 = 伪类选择器 > 标签选择器 = 伪元素选择器
+  - 相邻兄弟选择器  `+` 
+  - `~` 指定元素的后面的所有兄弟结点
+### 3.`position`的属性值有哪些,它们的区别是什么?
+  - `static` 静态定位
+    - 默认值。没有定位
+  - `relative` 相对定位
+    - 生成相对定位的元素，relative定位的层总是相对于其最近的父元素，无论其父元素是何种定位方式
+  - `absolute` 绝对定位 absolute定位的层总是相对于其最近的定义为absolute或relative的父层
+  - `fixed` 固定定位
+ 
+### 列举一下移动端适配方案
+  - `rem`适配
+    - 本质是布局等比例缩放，通过动态设置`html`的`font-size`来设改变`rem`的大小
+    - 在响应式布局中，必须通过js来动态控制根元素font-size的大小，也就是说css样式和js代码有一定的耦合性，且必须将改变font-size的代码放在css样式之前。
+  - `vw适配`
+  - `vw + rem`
+  - `px`
