--- a/字节/2.二面/1.基础部分.MD
+++ b/字节/2.二面/1.基础部分.MD
@@ -1,18 +1,66 @@
 ### Http状态码有哪些
+
 ### HTTP1.1/HTTP2.0的区别
+ - 【1】新的二进制格式
+  - HTTP1.x的解析是基于文本
+ - 【2】多路复用
+ - 【3】header压缩
+ - 【4】服务端推送
+
 ### 描述一下浏览器缓存
+ - 浏览器缓存分为强缓存和协商缓存，强缓存会直接从浏览器里面拿数据，协商缓存会先访问服务器看缓存是否过期，再决定是否从浏览器里面拿数据。
+ - 控制强缓存的字段有：Expires和Cache-Control，Expires 和 Cache-Control。
+ - 控制协商缓存的字段是：Last-Modified / If-Modified-Since 和 Etag / If-None-Match，其中 Etag / If-None-Match的优先级比Last-Modified / If-Modified-Since高。
+
 ### cookie和Session的区别
+ - Session 是在服务端保存的一个数据结构，用来跟踪用户的状态，这个数据可以保存在集群、数据库、文件中； 
+ - Cookie 是客户端保存用户信息的一种机制，用来记录用户的一些信息，也是实现 Session 的一种方式
 ### 描述一下xss和csrf，如何防范
+ - XSS：恶意攻击者往 Web 页面里插入恶意 Script 代码，当用户浏览该页之时，嵌入其中 Web 里面的 Script 代码会被执行，从而达到恶意攻击用户的目的。
+ - CSRF 攻击是攻击者借助受害者的 Cookie 骗取服务器的信任，可以在受害者毫不知情的情况下以受害者名义伪造请求发送给受攻击服务器，从而在并未授权的情况下执行在权限保护之下的操作。
+ - 防范XSS 
+  - 
+ - 预防CSRF
+  - 阻止不明外域的访问
+    - 同源检测
+    - Samesite Cookie
+  - 提交时要求附加本域才能获取的信息
+    - 双重Cookie验证
+    - CSRF Token
 ### 请求超时timeout的原理
+ - Promise的状态只能改变一次
 ### 描述一下进程和线程
+ - 进程是资源分配的最小单位，线程是CPU调度的最小单位
+ 做个简单的比喻：进程=火车，线程=车厢线程在进程下行进（单纯的车厢无法运行）
+ 【1】一个进程可以包含多个线程（一辆火车可以有多个车厢）
+ 【2】不同进程间数据很难共享（一辆火车上的乘客很难换到另外一辆火车，比如站点换乘）
+ 【3】同一进程下不同线程间数据很易共享（A车厢换到B车厢很容易）
+ 【4】进程要比线程消耗更多的计算机资源（采用多列火车相比多个车厢更耗资源）
+ 【5】进程间不会相互影响，一个线程挂掉将导致整个进程挂掉（一列火车不会影响到另外一列火车，但是如果一列火车上中间的一节车厢着火了，将影响到所有车厢）
+ 【6】进程可以拓展到多机，线程最多适合多核CPU（不同火车可以开在多个轨道上，同一火车的车厢不能在行进的不同的轨道上）
+ 【7】进程使用的内存地址可以上锁，即一个线程使用某些共享内存时，其他线程必须等它结束，才能使用这一块内存。（比如火车上的洗手间）－"互斥锁"
+ 【8】进程使用的内存地址可以限定使用量（比如火车上的餐厅，最多只允许多少人进入，如果满了需要在门口等，等有人出来了才能进去）－“信号量”
 ### node内存泄漏的原因
+ - 全局变量
+ - 闭包
+ - 事件监听
+ - 缓存
 ### 了解过vue迁移到小程序的原理
+
 ### 虚拟列表的实现原理
+
 ### 骨架图的实现方案
+
 ### React hooks的优点
+
 ### Dva的同步状态管理，异步状态管理，是如何实现的
+- genertor函数
 ### 描述一下vue的nextTick的原理
+
 ### webpack常用插件，以及dev和product有啥差别
+
 ### webpack打包原理
+
 ### 小程序页面之间的通信怎么处理
+
 ### webview组件和原生组件的区别
