--- a/字节/1.一面/2.CSS基础.MD
+++ b/字节/1.一面/2.CSS基础.MD
@@ -17,10 +17,200 @@
   - `absolute` 绝对定位 absolute定位的层总是相对于其最近的定义为absolute或relative的父层
   - `fixed` 固定定位
  
-### 列举一下移动端适配方案
+### 4、列举一下移动端适配方案
   - `rem`适配
     - 本质是布局等比例缩放，通过动态设置`html`的`font-size`来设改变`rem`的大小
     - 在响应式布局中，必须通过js来动态控制根元素font-size的大小，也就是说css样式和js代码有一定的耦合性，且必须将改变font-size的代码放在css样式之前。
   - `vw适配`
   - `vw + rem`
   - `px`
+
+### 5、flex的布局了解么，什么是主轴，如何控制主轴和副轴
+  - 【1】`flex`是一种以为的布局模型。它给`flexbox`的子元素之间提供了强大的空间分布和对齐能力
+  - 【2】设置`flex`布局后子元素的`float`,`vertical-align`,`clear`属性将会失效
+  - 【3】采用`flex`布局的元素称为`flex`容器(`flex-container`),它的所有子元素自动成为容器的成员称为`flex`项目(`flex-item`)
+  - 【4】容器默认存在两根轴：水平的主轴和垂直的交叉轴
+  - 【5】主轴的开始位置(与边框的交叉点)称为`main start`结束位置称为`main end`;交叉轴的开始位置叫做`cross start`,结束位置叫`corss end`
+  - 【6】项目默认沿主轴排列，单个项目占据主轴的空间称为`main size`,占据交叉轴的空间叫`cross size`
+  - 【7】`flex`布局的属性分为两类
+    - 【7-1】设置在容器上的属性
+      - 【7-1-1】`flex-dirction`决定主轴的方向 --> `row`,`row-reverse`,`column`,`column-reverse`
+      - 【7-1-2】`flex-wrap`决定如果一条轴线排不下如何换行`nowrap`,`wrap`,`wrap-reverse`
+      - 【7-1-3】`flex-flow`(`flex-direction`&&`flex-wrap`) `row nowrap`
+      - 【7-1-4】`justify-content`决定项目在主轴的对齐方式`flex-start`,`flex-end`,`center`,`space-between`,`space-around`
+      - 【7-1-5】 `align-items`决定项目在交叉轴的对齐方式 `flex-start`,`flex-end`,`center`,`baseline`
+      - 【7-1-6】`align-content`决定多根轴线的对齐方式，前提是`flex-wrap`设置为非`nowrap`
+    - 【7-2】设置在项目上的属性
+      - 【7-2-1】`order`定义项目的排列顺序。数值越小排列越靠前，默认为**0**
+      - 【7-2-2】`flex-grow`定义项目的放大比例，默认为**0**，如果不存在剩余空间此属性无效
+      - 【7-2-3】`flex-shrink`定义项目的缩小比例，默认为**1**
+      - 【7-2-4】`flex-basis`定义项目在分配剩余空间之前，项目占据的主轴空间。默认是**auto**,即项目本身的大小
+      - 【7-2-5】`flex`是`flex-grow flex-shrink flex-basis`的简写。默认是**0 1 auto**
+      - 【7-2-6】`align-self`定义单个项目与其他项目不一样的对齐方式
+
+### 6、Flex的优点和缺点，如何用flex布局两边固定，中间自适应；同时其他方式能实现么
+  - 优点 ：简单
+  - 缺点 ：兼容性
+  - 【1】`flex`布局
+  ```CSS
+    .container {
+      height: 200px;
+      display: flex;
+    }
+
+    .left,
+    .right {
+      width: 300px;
+    }
+
+    .left {
+      background: red;
+    }
+
+    .right {
+      background: yellow;
+    }
+
+    .center {
+      flex: 1;
+      background: green;
+    } 
+  ```
+  - 【2】浮动布局
+  - 【3】圣杯布局
+  - 【4】双飞翼布局
+  - 【5】table布局
+  - 【6】绝对定位布局
+  - 【7】网格布局
+
+### 7、如何实现水平垂直居中
+  - 【1】flex布局
+  ```CSS
+    .container{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+    }
+  ```
+  - 【2】子绝父相
+  ```CSS
+    .container{
+      position:absolute;
+      width:100px;
+      height:100px;
+      background-color:red;
+      left:50%;
+      top:50%;
+      transform:translate(50%,50%);
+    }
+  ```
+  - 【3】position + margin 
+  ```CSS
+    .container{
+      width:100px;
+      height:100px;
+      position:absolute;
+      top:0;
+      right:0;
+      bottom:0;
+      left:0;
+      margin:auto;
+      background-color:red;
+    }
+  ```
+  - 【4】margin移动
+  ```CSS
+   .container{
+     width:100px;
+     height:100px;
+     position:absolute;
+     left:50%;
+     top:50%;
+     margin-top:-50px;
+     margin-left:-50px;
+   }
+  ```
+
+### 8、如何清除浮动，清除浮动的原理
+ - 清除浮动的方法
+  - 【1】利用**clear**样式
+    ```CSS
+      .textDiv{
+        clear:left;
+      }
+    ```
+  - 【2】父元素标签结束之前插入清除浮动的块级元素
+   ```CSS
+      .clearDiv{
+        clear:both;
+      }
+   ```
+  - 【3】利用伪元素
+    ```CSS
+      .clearfix:after{
+        content:'';
+        height:0;
+        display:block;
+        clear:both;
+      }
+    ```
+  - 【4】利用`overflow`清除浮动
+    ```CSS
+      .container{
+        overflow:auto;
+      }
+    ```
+  - 清除浮动的原理
+    - 【1】clear
+    - 【2】形成**BFC**
+
+### 9、什么是BFC，它的作用是什么，什么行为会产生BFC
+  - BFC(块级格式化上下文)
+    - 块级格式化上下文是`CSS`可视化渲染的一部分。它是一块区域，规定了内部块盒的渲染方式，以及浮动相互之间的影响关系；
+  - 作用
+    - 【1】就像一道屏障，隔离出了**BFC**内部和外部，内部和外部区域的渲染相互之前不影响。**BFC**有自己的一套内部子元素渲染的规则，不影响外部渲染，也不受外部渲染影响。
+    - 【2】**BFC**的区域不会和外部浮动盒子的外边距区域发生叠加。也就是说，外部任何浮动元素区域和**BFC**区域是泾渭分明的，不可能重叠
+    - 【3】**BFC**在计算高度的时候，内部浮动元素的高度也计算在内。也就是说，即使**BFC**区域内只有一个浮动元素，**BFC**的高度也不会发生塌陷，高度是大于等于浮动元素的高度的
+    - 【4】`HTML`结构中，当构建**BFC**区域的元素紧接着一个浮动盒子时，即使是该浮动盒子的兄弟节点，**BFC**区域会首先尝试在浮动盒子的旁边渲染，但若宽度不够，就在浮动元素的下方渲染
+  - 产生**BFC**的方式
+    - 【1】根元素`<html>`
+    - 【2】浮动元素 (`float`不是`none`)
+    - 【3】绝对定位元素 (元素的`position`为`absolute`,`fixed`)
+    - 【4】行内块元素 (`display:inline-block`)
+    <!-- - 【5】表格单元格 (`display:table-cell`) -->
+    - 【5】`overflow`值不为`visible`
+    - 【6】`display`值为`flow-root`
+    - 【7】`contain`值为`layout`、`content`、`paint`
+    - 【8】弹性元素`display`为`flex`或`inline-flex`
+    - 【9】网格元素`display`为`grid`或`inline-grid`
+
+### 10、父元素浮动了，子元素形成BFC能清除浮动么
+ - 不能
+
+### 11、css的动画如何实现
+ - 给元素添加`animation`属性，然后根据自己的需要分别设置
+  - 【1】name ：必填。动画的名称，配合@keyframe
+  - 【2】duration：必填。动画执行一次的周期时间
+  - 【3】timing-function：选填。动画执行曲线，简单来讲就是动画执行规律，是先快后慢，还是先慢后快，默认是**ease**，也就是允许
+  - 【4】delay：延迟执行时间，选填
+  - 【5】iteration-count：必填。动画的持续时间，如果想要它无限循环，那就填**infinity**
+  - 【6】direction：选填。动画执行方向，默认为**normal**
+  - 【7】fill-mode：必填。动画填充模式，是保持最后一帧呢？还是第一帧呢？它有三个选项
+    - forwards 最后一帧
+    - backwards 第一帧
+    - both 表示上述两者效果都有
+
+### 12、为什么使用transform写动画，不用left写动画
+ - 因为`transform`会被浏览器直接丢到合成线程中，不会影响其他图层
+
+### 13、回流和重绘的区别，什么行为会导致回流，什么行为会导致重绘
+ - 在请求到了`HTML`和`CSS`文件后，浏览器会并行的解析它们并合成一个合成树，然后渲染出来。当元素的几何属性、位置发生改变、访问`client/scroll`家族就会引起页面的回流，也就是说要重新生成`DOM`树和`CSSOM`树；当元素的外观发生变化时，如颜色的变化，就会引起页面的重绘，进需要重新构建`CSSOM`树，所以它们的区别就是回流必定引起重绘，重绘不一定引起回流。
+
+### 14、了解CSS3么，CSS3里面新增了哪些属性
+ - CSS动画
+ - box-shawdow、box-radius
+ - @media媒体查询
+ - Flex布局
+ - transfrom、opacity(这两个属性会被GPU单独渲染)
+### 15、1px的问题可以如何去解决【尽可能地多说】
+### 16、less和css的区别，less的函数有了解过么
