chore:bluecity第一次提交

--- a/字节/1.一面/1.JS基础.MD
+++ b/字节/1.一面/1.JS基础.MD
@@ -299,7 +299,7 @@ Array.prototype.forEach = function (cb, context) {
         timer = setTimeout(()=>{
           cb(...args);
           timer = null;
-        })
+        },wait)
       }
     }
  ```
