bluecity第二次提交

--- a/面试题/2.bluecity.MD
+++ b/面试题/2.bluecity.MD
@@ -121,6 +121,9 @@ function deepClone(obj, hash = new WeakMap()) {
 
 # 13. 请使用正则表达式，隐藏手机号中间四位，如：13409872561 变成 134xxxx2561。
 ```JS
+function pat(str){
+  return str.replace(/(\d{3})\d*(\d{4})/,'$1****$2')
+}
 ```
 
 
@@ -200,15 +203,16 @@ function deepClone(obj, hash = new WeakMap()) {
 
 
 # 15. Promise.resolve(Promise.resolve(123)).then(console.log) 的输出是什么？为什么？
-
-
+ - 123
+ - 
 
 # 16. 在哪个生命周期函数优化 React 组件的性能？为什么？
-
+ - `shouldComponentUpdate`
 
 
 # 17. 如果给 setState 传递一个函数作为参数会怎样？setState 的第二个参数有什么作用？
-
+  - 会拿到当前的states值作为参数传递给出传入的函数
+  - 第二个参数是callback，当前callback的参数是最新的state值
 
 
 # 18. git fetch 和 git pull 有什么区别？如何恢复先前的一次提交？如果临时想转到其他分支开发，又不想提交已经进行了一半的工作怎么办？
@@ -220,3 +224,5 @@ function deepClone(obj, hash = new WeakMap()) {
 
 
 # 20. 你所了解的 Web 攻击技术有哪些，以及如何防御？
+- xss
+- corf
